doc(): hablar del jar